e meson build - refactor and clean up config and some module only cfg
config that is only needed fro modules only needs to be don in the
modules subdir meson.build... i tried doing what modules do but output
files cant have paths.

--- a/config/default/meson.build
+++ b/config/default/meson.build
@@ -1,19 +1,22 @@
-config_default = ['e.src', 'e_bindings.src']
-config_default_output = ['e.cfg', 'e_bindings.cfg']
+dir = 'default'
+src = [
+  'e',
+  'e_bindings'
+]
 
-config_dist_default = ['enlightenment-default.png', 'profile.desktop']
+##### boilerplate config build + install of icons/dirs
 i = 0
-foreach cd: config_default
-	custom_target(' '.join(['config_dist_default', cd]),
-		input: cd,
-		command: [eet, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
-		output: config_default_output[i],
-		install: true,
-		install_dir: join_paths(dir_config, 'default')
-	)
-	i += 1
+foreach cd: src
+  custom_target(' '.join(['config_dist', dir, cd]),
+		input      : cd + '.src',
+		output     : cd + '.cfg',
+		command    : [eet, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
+		install    : true,
+		install_dir: join_paths(dir_config, dir)
+               )
+  i += 1
 endforeach
-foreach cd: config_default_output
-	out = join_paths(dir_config, 'default', cd)
-	meson.add_install_script(chmod, 'a+r', out)
+foreach cd: src
+  o = join_paths(dir_config, dir, cd + '.cfg')
+  meson.add_install_script(chmod, 'a+r', o)
 endforeach
