--- a/config/mobile/meson.build
+++ b/config/mobile/meson.build
@@ -1,23 +1,29 @@
-config_mobile = ['e.src', 'e_bindings.src', 'module.battery.src', 'module.conf.src']
-config_mobile_output = ['e.cfg', 'e_bindings.cfg', 'module.battery.cfg', 'module.conf.cfg']
+dir='mobile'
+src = [
+  'e',
+  'e_bindings',
+  'module.battery',
+  'module.conf'
+]
 
+##### boilerplate config build + install of icons/dirs
 i = 0
-foreach cd: config_mobile
-	custom_target(' '.join(['config_dist_mobile', cd]),
-		input: cd,
-		command: [eet, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
-		output: config_mobile_output[i],
-		install: true,
-		install_dir: join_paths(dir_config, 'mobile')
-	)
-	i += 1
+foreach cd: src
+  custom_target(' '.join(['config_dist', dir, cd]),
+		input      : cd + '.src',
+		output     : cd + '.cfg',
+		command    : [eet, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
+		install    : true,
+		install_dir: join_paths(dir_config, dir)
+               )
+  i += 1
 endforeach
-
-config_dist_mobile = ['enlightenment-mobile.png', 'profile.desktop']
-install_data(config_dist_mobile,
-	install_dir: join_paths(dir_config, 'mobile')
-)
-foreach cd: config_mobile_output
-	out = join_paths(dir_config, 'mobile', cd)
-	meson.add_install_script(chmod, 'a+r', out)
+install_data([ 'enlightenment-' + dir + '.png',
+               'profile.desktop'
+             ],
+             install_dir: join_paths(dir_config, dir)
+            )
+foreach cd: src
+  o = join_paths(dir_config, dir, cd + '.cfg')
+  meson.add_install_script(chmod, 'a+r', o)
 endforeach
