meson: add HAVE_DRM2 and HAVE_WL_DRM
for now i just added HAVE_WL_DRM but its just the same as
USE_MODULE_WL_DRM, maybe we can replace HAVE_WL_DRM once autotools is
gone, so we have a clear pattern.

--- a/meson.build
+++ b/meson.build
@@ -244,6 +244,13 @@ if get_option('mount-eeze') == true
   endif
 endif
 
+if get_option('wayland') == true
+  if get_option('wl-drm')
+    dep_ecore_drm2 = dependency('ecore-drm2', required : true)
+    config_h.set('HAVE_DRM2', '1')
+  endif
+endif
+
 dep_rt               = cc.find_library('rt', required: false)
 dep_eina             = dependency('eina'            , required: true, version: efl_version)
 dep_eet              = dependency('eet'             , required: true)
