meson build - trim down some data file build files a little

--- a/data/desktop/meson.build
+++ b/data/desktop/meson.build
@@ -1,8 +1,5 @@
-desktop_dist = [
-	'enlightenment_filemanager.desktop',
-	'enlightenment_askpass.desktop'
-]
-
-install_data(desktop_dist,
-	install_dir: join_paths(dir_data, 'applications')
-)
+install_data([ 'enlightenment_filemanager.desktop',
+               'enlightenment_askpass.desktop'
+             ],
+             install_dir: join_paths(dir_data, 'applications')
+            )
