--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -1,18 +1,15 @@
-icons_dist = [
-	'xterm.png',
-	'web_browser.png',
-	'audio_player.png',
-	'mail_client.png',
-	'video_player.png',
-	'text_editor.png',
-	'image_viewer.png',
-	'audio_player2.png'
-]
-
-install_data(icons_dist,
-	install_dir: join_paths(dir_data, 'enlightenment/data/icons')
-)
+install_data([ 'xterm.png',
+               'web_browser.png',
+               'audio_player.png',
+               'mail_client.png',
+               'video_player.png',
+               'text_editor.png',
+               'image_viewer.png',
+               'audio_player2.png'
+             ],
+             install_dir: join_paths(dir_data, 'enlightenment/data/icons')
+            )
 
 install_data('enlightenment-askpass.png',
-	install_dir: join_paths(dir_data, 'pixmaps')
-)
+             install_dir: join_paths(dir_data, 'pixmaps')
+            )
