--- a/data/images/meson.build
+++ b/data/images/meson.build
@@ -1,11 +1,8 @@
-images_dist = [
-	'enlightenment.png',
-	'test.png',
-	'test.jpg',
-	'test.edj',
-	'test.svg'
-]
-
-install_data(images_dist,
-	install_dir: join_paths(dir_data, 'enlightenment/data/images')
-)
+install_data([ 'enlightenment.png',
+               'test.png',
+               'test.jpg',
+               'test.edj',
+               'test.svg'
+             ],
+             install_dir: join_paths(dir_data, 'enlightenment/data/images')
+            )
