--- a/data/input_methods/meson.build
+++ b/data/input_methods/meson.build
@@ -1,13 +1,10 @@
-input_methods_dist = [
-	'scim.imc',
-	'uim.imc',
-	'iiimf.imc',
-	'ibus.imc',
-	'gcin.imc',
-	'hime.imc',
-	'fcitx.imc'
-]
-
-install_data(input_methods_dist,
-	install_dir: join_paths(dir_data, 'enlightenment/data/input_methods')
-)
+install_data([ 'scim.imc',
+               'uim.imc',
+               'iiimf.imc',
+               'ibus.imc',
+               'gcin.imc',
+               'hime.imc',
+               'fcitx.imc'
+             ],
+             install_dir: join_paths(dir_data, 'enlightenment/data/input_methods')
+            )
