--- a/data/tools/meson.build
+++ b/data/tools/meson.build
@@ -1,7 +1,3 @@
-tools_dist = [
-	'enlightenment_remote'
-]
-
-install_data(tools_dist,
-	install_dir: dir_bin
-)
+install_data('enlightenment_remote',
+             install_dir: dir_bin
+            )
