--- a/data/favorites/meson.build
+++ b/data/favorites/meson.build
@@ -1,11 +1,8 @@
-favorites_dist = [
-	'.order',
-	'desktop.desktop',
-	'home.desktop',
-	'root.desktop',
-	'tmp.desktop'
-]
-
-install_data(favorites_dist,
-	install_dir: join_paths(dir_data, 'enlightenment/data/favorites')
-)
+install_data([ '.order',
+               'desktop.desktop',
+               'home.desktop',
+               'root.desktop',
+               'tmp.desktop'
+             ],
+             install_dir: join_paths(dir_data, 'enlightenment/data/favorites')
+            )
