wl_drm: do not say you have wl_drm backend in config.h when you have not.

--- a/src/modules/wl_drm/meson.build
+++ b/src/modules/wl_drm/meson.build
@@ -6,6 +6,6 @@ no_icon = true
 
 if get_option('wayland') != true
   disable = true
+else
+  config_h.set('HAVE_WL_DRM', '1')
 endif
-
-config_h.set('HAVE_WL_DRM', '1')
