--- a/src/modules/wl_wl/meson.build
+++ b/src/modules/wl_wl/meson.build
@@ -1,9 +1,9 @@
-src = files(
-  'e_mod_main.c'
- )
-
-no_icon = true
-
 if get_option('wayland') != true
   disable = true
+else
+  src = files(
+    'e_mod_main.c'
+  )
+
+  no_icon = true
 endif
