remove distro packaging files
let distros provide these, projects should not

ref T4991

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,11 +38,7 @@ config.rpath \
 README \
 AUTHORS \
 COPYING \
-enlightenment.spec.in \
-enlightenment.spec \
-enlightenment.pc \
-pkgbuild/PKGBUILD \
-pkgbuild/enlightenment.install
+enlightenment.pc
 
 include m4/Makefile.mk
 
